Change in menu bio

--- a/biografia.html
+++ b/biografia.html
@@ -23,7 +23,7 @@
         </a>
         <a href="index.html">Inicio</a>
         <a href="biografia.html" class="activa">Bio</a>
-        <a href="#">Opción 2</a>
+        <a href="#">Libros</a>
         <a href="#">Opción 3</a>
     </div>
     <!-- Fin Menú -->
